<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interface06">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorbody"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-297dp">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:background="@color/colortop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:src="@drawable/reader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039"

            />

        <TextView
            android:id="@+id/textname"
            style="@style/stylesforheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Toplabel"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.557"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.537" />

        <Button
            android:id="@+id/buttonlogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logoutbutton"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173" />

        <TextView
            android:id="@+id/textidname"
            style="@style/stylesforusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Toplabel2"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.917"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.586" />

        <TextView
            android:id="@+id/upcommingbooks"
            style="@style/stylesforsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcommingbooks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.26" />

        <TableRow
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            app:layout_constraintVertical_bias="0.865">

            <TextView
                android:id="@+id/coloum1"
                style="@style/stylesfortable"
                android:layout_width="126dp"
                android:layout_height="49dp"
                android:text="@string/table1" />

            <TextView
                android:id="@+id/coloum2"
                style="@style/stylesfortable"
                android:layout_width="136dp"
                android:layout_height="49dp"
                android:text="@string/table2" />

            <TextView
                android:id="@+id/coloum3"
                style="@style/stylesfortable"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:text="@string/table3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

        </TableRow>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>